Guile NEWS --- history of user-visible changes.
Copyright (C) 1996-2015 Free Software Foundation, Inc.
See the end for copying conditions.

Please send Guile bug reports to bug-guile@gnu.org.



Changes in 2.1.4 (changes since the 2.1.3 alpha release):

* Notable changes
* New interfaces

** Implement R6RS output-buffer-mode
** Implement R6RS bytevector->string, string->bytevector

* New deprecations
* Incompatible changes
** Statically scoped module duplicate handlers

It used to be that if a module did not specify a #:duplicates handler,
when a name was first referenced in that module and multiple imported
modules provide that name, the value of the
`default-duplicate-binding-handlers' parameter would be used to resolve
the duplicate bindings.  We have changed so that instead a module
defaults to the set of handlers described in the manual.  If the module
specifies #:duplicates, of course we use that.  The
`default-duplicate-binding-handlers' parameter now simply accesses the
handlers of the current module, instead of some global value.

* Bug fixes
** Fix bug importing specific bindings with #:select

It used to be that if #:select didn't find a binding in the public
interface of a module, it would actually grovel in the module's
unexported private bindings.  This was not intended and is now fixed.

** Fix fixnum-range checks in R6RS fixnum bitops
   (http://bugs.gnu.org/14917)

** Fix `monitor' macro

** Fix bug with GUILE_INSTALL_LOCALE=1 and default port encodings

If GUILE_INSTALL_LOCALE is unset in the environment or set to 1, Guile
will call setlocale() to install the locale.  However it was neglecting
to set the default port encoding to the locale's encoding.  This is
fixed.

** Various compiler bug fixes


Previous changes in 2.1.x (changes since the 2.0.x series):

* Notable changes

** Speed

The biggest change in Guile 2.2 is a complete rewrite of its virtual
machine and compiler internals.  The result is faster startup time,