@@ -948,6 +948,91 @@ initialize_custom_binary_output_ports (void)
 
 
 
+/* Custom binary input_output ports.  */
+
+static scm_t_port_type *custom_binary_input_output_port_type;
+
+
+static inline SCM
+make_custom_binary_input_output_port (SCM read_proc, SCM write_proc,
+                                      SCM get_position_proc,
+                                      SCM set_position_proc, SCM close_proc)
+{
+  struct custom_binary_port *stream;
+  const unsigned long mode_bits = SCM_WRTNG | SCM_RDNG;
+
+  stream = scm_gc_typed_calloc (struct custom_binary_port);
+  stream->read = read_proc;
+  stream->write = write_proc;
+  stream->get_position = get_position_proc;
+  stream->set_position_x = set_position_proc;
+  stream->close = close_proc;
+
+  return scm_c_make_port_with_encoding (custom_binary_input_output_port_type,
+                                        mode_bits, sym_ISO_8859_1, sym_error,
+                                        (scm_t_bits) stream);
+}
+
+SCM_DEFINE (scm_make_custom_binary_input_output_port,
+	    "make-custom-binary-input/output-port", 6, 0, 0,
+	    (SCM id, SCM read_proc, SCM write_proc, SCM get_position_proc,
+	     SCM set_position_proc, SCM close_proc),
+	    "Return a new custom binary input/output port.  The port's input\n"
+            "is drained by invoking @var{read_proc} and passing it a\n"
+            "bytevector, an index where octets should be written, and an\n"
+            "octet count.  The output is drained by invoking @var{write_proc}\n"
+            "and passing it a bytevector, an index where octets should be\n"
+            "written, and an octet count.")
+#define FUNC_NAME s_scm_make_custom_binary_input_output_port
+{
+  SCM_VALIDATE_STRING (1, id);
+  SCM_VALIDATE_PROC (2, read_proc);
+  SCM_VALIDATE_PROC (3, write_proc);
+
+  if (!scm_is_false (get_position_proc))
+    SCM_VALIDATE_PROC (4, get_position_proc);
+
+  if (!scm_is_false (set_position_proc))
+    SCM_VALIDATE_PROC (5, set_position_proc);
+
+  if (!scm_is_false (close_proc))
+    SCM_VALIDATE_PROC (6, close_proc);
+
+  return make_custom_binary_input_output_port
+    (read_proc, write_proc, get_position_proc, set_position_proc, close_proc);
+}
+#undef FUNC_NAME
+
+
+static int
+custom_binary_input_output_port_random_access_p (SCM port)
+{
+  struct custom_binary_port *stream = (void *) SCM_STREAM (port);
+
+  return scm_is_true (stream->set_position_x);
+}
+
+
+/* Instantiate the custom binary input_output port type.  */
+static inline void
+initialize_custom_binary_input_output_ports (void)
+{
+  custom_binary_input_output_port_type =
+    scm_make_port_type ("r6rs-custom-binary-input/output-port",
+			custom_binary_input_port_read,
+			custom_binary_output_port_write);
+
+  scm_set_port_seek (custom_binary_input_output_port_type,
+                     custom_binary_port_seek);
+  scm_set_port_random_access_p (custom_binary_input_output_port_type,
+                                custom_binary_input_output_port_random_access_p);
+  scm_set_port_close (custom_binary_input_output_port_type,
+                      custom_binary_port_close);
+}
+
+
+
+
 /* Transcoded ports.  */
 
 static scm_t_port_type *transcoded_port_type = 0;
@@ -1082,5 +1167,6 @@ scm_init_r6rs_ports (void)
   initialize_custom_binary_input_ports ();
   initialize_bytevector_output_ports ();
   initialize_custom_binary_output_ports ();
+  initialize_custom_binary_input_output_ports ();
   initialize_transcoded_ports ();
 }
